objects/Donation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DescriptionOfDonate__c</fullName>
        <label>Description of donate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Donation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>DescriptionOfDonate__c</columns>
        <columns>Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Donation-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountOrContact</fullName>
        <active>true</active>
        <errorConditionFormula>((Account__c == NULL)   &amp;&amp;   (Contact__c == NULL)) || ((Account__c != NULL)   &amp;&amp;   (Contact__c != NULL))</errorConditionFormula>
        <errorMessage>Choose account or contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BlockEditing</fullName>
        <active>false</active>
        <description>This rule prevents of editing Donation record</description>
        <errorConditionFormula>ISCHANGED( DescriptionOfDonate__c ) &amp;&amp; DescriptionOfDonate__c != &apos;123&apos;</errorConditionFormula>
        <errorDisplayField>DescriptionOfDonate__c</errorDisplayField>
        <errorMessage>Only 123 is allowed as a value</errorMessage>
    </validationRules>
</CustomObject>